crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__agent_reference_flow__e2e_agent_step2_navigated.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
                                                                                
  [agent] researcher Deep research and analysis                                 
  [agent] coder Code generation and review                                      
  [agent] writer Writing and editing                                            
  [file] src/main.rs workspace                                                  
> [file] src/lib.rs workspace ↓                                                 
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
